[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/fonts/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/fonts/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/fonts/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/gold.png" type="Texture" id=4]
[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=5]
[ext_resource path="res://scripts/controllers/GameOverController.gd" type="Script" id=6]
[ext_resource path="res://scripts/behaviors/ui_click.gd" type="Script" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )
fallback/0 = ExtResource( 3 )
fallback/1 = ExtResource( 1 )

[sub_resource type="GDScript" id=2]
script/source = "extends TextureRect

func _on_TextureRect_gui_input(event: InputEvent)->void:
  if (event is InputEventMouseButton && event.is_pressed()) || event is InputEventScreenTouch:
      OS.shell_open(\"http://godotengine.org\")
"

[node name="GameOver" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -1000.0
margin_right = -100.0
margin_bottom = -1200.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionTween" type="Tween" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 817.0
margin_bottom = 393.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 790.0
margin_bottom = 366.0
custom_constants/separation = 20
alignment = 1

[node name="ResolutionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 770.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "You won!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 770.0
margin_bottom = 152.0
custom_constants/separation = 20
alignment = 1

[node name="GoldEarnedContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 264.0
margin_bottom = 32.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/GoldEarnedContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="GoldEarnedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/GoldEarnedContainer"]
margin_left = 42.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 28.0
text = "earned: 50"

[node name="EnemiesKilledLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 284.0
margin_top = 4.0
margin_right = 436.0
margin_bottom = 28.0
text = "Bugs killed: 100"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 456.0
margin_top = 4.0
margin_right = 652.0
margin_bottom = 28.0
text = "Score: 10000000000"

[node name="RestartContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 770.0
margin_bottom = 214.0
custom_constants/separation = 20
alignment = 1

[node name="Easy" type="Button" parent="MarginContainer/VBoxContainer/RestartContainer"]
margin_left = 75.0
margin_right = 375.0
margin_bottom = 42.7363
rect_min_size = Vector2( 300, 0 )
text = "Restart (Easy)"
script = ExtResource( 7 )

[node name="Normal" type="Button" parent="MarginContainer/VBoxContainer/RestartContainer"]
margin_left = 395.0
margin_right = 695.0
margin_bottom = 42.7363
rect_min_size = Vector2( 300, 0 )
text = "Restart (Normal)"
script = ExtResource( 7 )

[node name="Credits" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 770.0
margin_bottom = 258.0
text = "Made with love by: Greyson Richey and Kelsey Peterson for Ludum Dare 46"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 770.0
margin_bottom = 342.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 271.0
margin_top = 20.0
margin_right = 431.0
margin_bottom = 44.0
text = "Made With Godot"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 435.0
margin_right = 499.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )
script = SubResource( 2 )
[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer2/TextureRect" to="MarginContainer/VBoxContainer/HBoxContainer2/TextureRect" method="_on_TextureRect_gui_input"]
